--- a/libWindbot.csproj
+++ b/libWindbot.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Game\AI\Zones.cs" />
     <Compile Include="Game\BattlePhase.cs" />
     <Compile Include="Game\BattlePhaseAction.cs" />
+    <Compile Include="Game\ChainTarget.cs" />
     <Compile Include="Game\ClientCard.cs" />
     <Compile Include="Game\ClientField.cs" />
     <Compile Include="Game\Deck.cs" />
